#QZXing库
OPTION(OPTION_RABBITIM_USE_QZXING "Use QZXing library" ON)
if(NOT OPTION_RABBITIM_USE_QZXING)
    return()
endif()
FIND_PACKAGE(QZXing)
if(NOT QZXing_FOUND)
    return()
endif()

PROJECT(QRCode)

SET(QT_COMPONENTS Multimedia Quick)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS ${QT_COMPONENTS})
if(Qt${QT_VERSION_MAJOR}_FOUND)
    FOREACH(_COMPONENT ${QT_COMPONENTS})
        list(APPEND QT_LIBRARIES Qt${QT_VERSION_MAJOR}::${_COMPONENT})
    ENDFOREACH()
endif()

ADD_PLUGIN_TARGET(
    SOURCE_FILES
        CPluginQRCode.cpp
        FrmScanQRcode.cpp
        FrmScanQRcode.ui
    INCLUDE_DIRS $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/Src>
    PRIVATE_LIBS RabbitIm QZXing
    )
